--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.7",
+    "type-check": "^0.4.0",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
   }
