fix: uninstall type check and add check type script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "format": "prettier --write ./src --list-different"
+    "format": "prettier --write ./src --list-different",
+    "type-check": "tsc -b"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -29,7 +30,6 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.7",
-    "type-check": "^0.4.0",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
   }
